Set user fields optional
